# imap-data-access

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: api_demo.ipynb
imap_data_access/: __init__.py  cli.py  file_validation.py  io.py
tests/: conftest.py  test_cli.py  test_config_options.py  test_file_validation.py  test_io.py
