[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imap-data-access"
version = "0.2.0"
description = "IMAP SDC Data Access"
authors = [{name = "IMAP SDC Developers", email = "imap-sdc@lists.lasp.colorado.edu"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["IMAP", "SDC", "SOC", "SDS", "Science Operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.scripts]
imap-data-access = "imap_data_access.cli:main"

[project.urls]
homepage = "https://github.com/IMAP-Science-Operations-Center"
repository = "https://github.com/IMAP-Science-Operations-Center/imap-data-access"


[project.optional-dependencies]
dev = ["ruff"]
test = ["pytest", "pytest-cov"]


[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-ra"

[tool.ruff]
target-version = "py39"
select = ["B", "E", "F", "I", "N", "W", "PL", "PT", "UP", "RUF"]
ignore = ["PLR2004"]
